--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <!-- Im header wird der Kopf der Webseite angegeben.
             Dies ist aber nur ein Struktur-Element. Damit der Header auch immer
             ganz oben angezeigt wird, braucht es noch das richtige CSS dafür. -->
-            <h1>Webseite von ...</h1>
+            <h1>Webseite von Giada Buscemi</h1>
         </header>
 
         <nav>
@@ -41,14 +41,15 @@
                 <!-- Dieses Element wird verwendet um einen Abschnitt auf der
                 Webseite vom Rest abzutrennen. Für Abschnitte in einem Text
                 verwendet man das p-Element. -->
-                <h2>Erster Abschnitt</h2>
+                <h2>Giada Buscemi</h2>
                 <p>
                     <!-- Mit dem p-Element Teilt man einen Text in Paragraphen
                     ein. Das p-Element hat meistens nur noch Text, Links oder
                     Bilder drin, sonst keine weiteren Elemente. -->
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea
-                    itaque eaque vel necessitatibus amet consectetur corrupti
-                    repudiandae ipsam aliquam sint.
+                    Ich heisse Giada Buscemi und bin 16 Jahre alt. Ich wohne mit
+                    meiner Familie in Muttenz. Meine Mutter heisst Sabina und
+                    mein Vater Aldo. Ich habe eine 14 jährige Schwester namens
+                    Ambra.
                 </p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
