--- a/index.html
+++ b/index.html
@@ -47,19 +47,14 @@
                     ein. Das p-Element hat meistens nur noch Text, Links oder
                     Bilder drin, sonst keine weiteren Elemente. -->
                     Ich heisse Giada Buscemi und bin 16 Jahre alt. Ich wohne mit
-                    meiner Familie in Muttenz. Meine Mutter heisst Sabina und
-                    mein Vater Aldo. Ich habe eine 14 jährige Schwester namens
-                    Ambra.
+                    meiner Familie in Muttenz. Ich habe eine 14 jährige
+                    Schwester namens Ambra. Zu Hause spreche ich Deutsch und
+                    Italienisch da meine Eltern beide aus Italien sind. Ich gehe
+                    auf das Gymnasium Muttenz mit dem Schwerpunkt Spanisch. In
+                    meiner Freizeit gehe ich gerne raus und verbringe Zeit mit
+                    anderen.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
-                    natus magni non cumque voluptatum similique ullam
-                    temporibus. Magni sequi sunt temporibus ab a nobis quo non,
-                    molestias sapiente dolorum repellendus obcaecati odit, dolor
-                    quae illo ratione, veniam autem id praesentium. Consectetur,
-                    totam asperiores expedita culpa doloribus nesciunt error
-                    architecto dolorum!
-                </p>
+                <p>Ich bin</p>
             </section>
 
             <section>
@@ -70,8 +65,16 @@
                     verwendet, damit wir den Effekt von einem Text neben einem Bild
                     einfach hinbekommen können. -->
                     <div class="text">
-                        Hier ist eine Beschreibung von dem Bild, oder einfach
-                        Text der dazu passen könnte.
+                        Wie ich beim oberen Text bereits erwähnt habe heisse ich
+                        Giada Buscemi und bin 16 Jahre alt. Ich würde mich
+                        selber als eher offener Mensch bezeichnen. Ich mag es
+                        neue Menschen kennenzulernen und neue Dinge
+                        auszuprobieren. Ich bin hilfsberet und zuverlässig. Was
+                        ich mag: Ich liebe Tiere. Ich selbst habe eine Katze
+                        names Suri. Sie ist 2 Jahre alt und ist sehr verspielt.
+                        Ich reise sehr gerne. Im Sommer gehen wir immer nach
+                        Italien und in den anderen Ferien gehen wir an andere
+                        Orte. Ich höre gerne Musik und schalfe sehr gerne.
                     </div>
                     <div class="image">
                         <img src="/img/mountains.png" alt="" />
