bild,text und neuer abschnitt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
         <title>Meine Webseite</title>
 
         <link rel="stylesheet" href="style.css" />
+
+        <style>
+            body {
+                background-color: lightblue;
+            }
+            p {
+                font-size: 30px;
+            }
+            h2 {
+                font-size: 30px;
+            }
+        </style>
     </head>
 
     <body>
@@ -28,6 +40,9 @@
             <ul>
                 <li>
                     <a href="./pages/hobbies.html">Hobbies</a>
+                </li>
+                <li>
+                    <a href="./pages/meine-zukunft.html">meine Zukunft</a>
                 </li>
             </ul>
         </nav>
@@ -50,34 +65,45 @@
                     meiner Familie in Muttenz. Ich habe eine 14 jährige
                     Schwester namens Ambra. Zu Hause spreche ich Deutsch und
                     Italienisch da meine Eltern beide aus Italien sind. Ich gehe
-                    auf das Gymnasium Muttenz mit dem Schwerpunkt Spanisch. In
-                    meiner Freizeit gehe ich gerne raus und verbringe Zeit mit
-                    anderen.
+                    auf das Gymnasium Muttenz mit dem Schwerpunkt Spanisch. Ich
+                    habe mich für Spanisch entschieden da ich gerne neue
+                    Sprachen lerne und ich finde das Spanisch eine sehr schöne
+                    Sprache ist. 
                 </p>
-                <p>Ich bin</p>
+                <p>In meiner Freizeit gehe ich gerne raus und verbringe Zeit mit anderen. Oft muss ich jedoch auch lernen, was mir natürlicher weniger mühe bereitet aber trotzallem ist dies sehr wichtig da ich später an die Uni gehen möchte und da Psychologie studieren möchte. Ich schue oft Filme auf Netflix oder gehe shoppen. Ich habe mir aber vorgenommen mir einen kleinen Nebenjob zu suchen damit ich neben dem Gymnasium auch ein wenig Geld verdiene.
+
+                </p>
             </section>
 
             <section>
-                <h2>Abschnitt mit Text und Bild</h2>
+                <h2>Ich:</h2>
                 <div class="text-and-img">
                     <!-- Hier wird eine Klasse verwendet, die in CSS angibt wie das
                     Element gestaltet werden soll. Es werden hier 2 Kinder-Elemente
                     verwendet, damit wir den Effekt von einem Text neben einem Bild
                     einfach hinbekommen können. -->
                     <div class="text">
-                        Wie ich beim oberen Text bereits erwähnt habe heisse ich
-                        Giada Buscemi und bin 16 Jahre alt. Ich würde mich
-                        selber als eher offener Mensch bezeichnen. Ich mag es
-                        neue Menschen kennenzulernen und neue Dinge
-                        auszuprobieren. Ich bin hilfsberet und zuverlässig. Was
-                        ich mag: Ich liebe Tiere. Ich selbst habe eine Katze
-                        names Suri. Sie ist 2 Jahre alt und ist sehr verspielt.
-                        Ich reise sehr gerne. Im Sommer gehen wir immer nach
-                        Italien und in den anderen Ferien gehen wir an andere
-                        Orte. Ich höre gerne Musik und schalfe sehr gerne.
+                        <p>
+                            Wie ich beim oberen Text bereits erwähnt habe heisse
+                            ich Giada Buscemi und bin 16 Jahre alt. Ich würde
+                            mich selber als eher offener Mensch bezeichnen. Ich
+                            mag es neue Menschen kennenzulernen und neue Dinge
+                            auszuprobieren. Ich bin hilfsberet und zuverlässig.
+                            Was ich mag: Ich liebe Tiere. Ich selbst habe eine
+                            Katze names Suri. Sie ist 2 Jahre alt und ist sehr
+                            verspielt. Ich reise sehr gerne. Im Sommer gehen wir
+                            immer nach Italien und in den anderen Ferien gehen
+                            wir an andere Orte. Ich höre gerne Musik und schalfe
+                            sehr gerne.
+                        </p>
                     </div>
                     <div class="image">
-                        <img src="/img/mountains.png" alt="" />
+                        <img src="/img/Sureya.jpg" alt="" />
+                        <svg height="300" width="300"></svg>
+    <ellipse cx="150" cy="150" rx="50" ry="50" fill="green">
+      <animate attributeName="ry" values="50;25;50" dur="1s" repeatCount="indefinite"/>
+    </ellipse>
+</svg>
                     </div>
                 </div>
             </section>
@@ -88,3 +114,5 @@
         </footer>
     </body>
 </html>
+
+
