--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -4,11 +4,35 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Meine Hobbies</title>
-
+        <style>
+            body {
+                background-color: lightblue;
+            }
+            p {
+                font-size: 30px;
+            }
+        </style>
         <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
         <a href="/">Home</a>
         <h1>Meine Hobbies</h1>
+        <p>
+            Auf dieser Seite würde ich euch ein wenig über meine Hobbys
+            erzählen. Eines meiner liebsten Hobbys ist Volleyball. Früher habe
+            ich im Verein gespielt, was mir immer viel Freude bereitet hat.
+            Momentan spiele ich jedoch nicht mehr im Verein, da ich irgendwann
+            aufgehört habe da mir das Team nicht so gefallen hat. Neben dem
+            Volleyball koche ich auch sehr gerne. Es macht mir Spaß, neue
+            Rezepte auszuprobieren und auch mal für meine Familie zu kochen. Ich
+            lerne sehr viel von meinen ELtern bei diesem Thema da ich finde,
+            dass sie sehr gut kochen können.Ein weiteres Hobby von mir ist die
+            Musik. Ich höre gerne verschiedene Musikrichtungen,am meisten Rap
+            oder Pop. Ich höre Musik in vielen SItuationen, also eigentlich fast
+            immer: Am Morgen wenn ich mich für die Schule vorbereite, wenn ich
+            lerne, zum einschlafen usw. Ich würde sehr gerne wieder Volleyball
+            spielen oder wieder ins Fitness zu gehen. Es wäre schön, wieder
+            etwas aktiv zu werden und etwas für meine Fitness zu tun.
+        </p>
     </body>
 </html>
