--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             </section>
 
             <section>
-                <h2>Ich:</h2>
+                <h2>Über mich:</h2>
                 <div class="text-and-img">
+            
                     <!-- Hier wird eine Klasse verwendet, die in CSS angibt wie das
                     Element gestaltet werden soll. Es werden hier 2 Kinder-Elemente
                     verwendet, damit wir den Effekt von einem Text neben einem Bild
@@ -99,13 +100,18 @@
                     </div>
                     <div class="image">
                         <img src="/img/Sureya.jpg" alt="" />
-                        <svg height="300" width="300"></svg>
-    <ellipse cx="150" cy="150" rx="50" ry="50" fill="green">
-      <animate attributeName="ry" values="50;25;50" dur="1s" repeatCount="indefinite"/>
-    </ellipse>
-</svg>
-                    </div>
+                       
+                    </svg>
                 </div>
+            </div>
+            <svg height="300" width="300">
+<ellipse cx="150" cy="150" rx="50" ry="50" fill="blue">
+<animate attributeName="ry" values="50;25;50" dur="1s" repeatCount="indefinite"/>
+</ellipse>
+</svg>
+<svg height="300" width="300">
+    <path fill="transparent" stroke="blue" stroke-width="5" d="M 100 100 L 200 100 L 150 200 Z"/>
+</svg>
             </section>
         </main>
 
