--- a/pages/meine-zukunft.html
+++ b/pages/meine-zukunft.html
@@ -25,9 +25,11 @@
             Universität und Psychlogie studieren. Nach dem Studio möchte ich
             gerne Psychologin werden mit dem Ziel irgendwann eingenständig zu
             werden. Dieser Job interessiert micht aus dem einfachen Grund das
-            ich gerne Menschen helfe. Ausserdem möchte ich heiraten und 2 Kinder
-            haben. Ich liebe kleine Kinder und freue mich darauf selber welche
-            zu haben.
+            ich gerne Menschen helfe. Ausserdem möchte ich heiraten und das Ziel
+            ist es natürlich sich danach nicht mehr zu trennen. Ich hätte gerne
+            2 Kinder. Ich liebe kleine Kinder und freue mich darauf selber
+            welche zu haben. Vielleicht möchte ich auch in einem anderen Land
+            wohnen aber um dies zu sagen ist es noch etwas zu früh.
         </p>
     </body>
 </html>
